k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp
  labels:
    app: java-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-webapp
  template:
    metadata:
      labels:
        app: java-webapp
    spec:
      containers:
      - name: webapp
        image: mjatto/java-webapp-calculator:latest
        ports:
        - containerPort: 8080
