k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp-service
spec:
  selector:
    app: java-webapp
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
